[tool.poetry]
name = "meteostat"
version = "2.0.0"
description = "Access and analyze historical weather and climate data with Python."
authors = ["Meteostat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
polars = "^0.17.14"
aiohttp = "^3.8.4"
requests = "^2.31.0"
numpy = "^1.25.2"
pandas = "^2.0.3"
pyarrow = "^12.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
