[tool.poetry]
name = "meteostat"
version = "2.0.0"
description = "Access and analyze historical weather and climate data with Python."
authors = ["Meteostat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
numpy = "^1.25.2"
pandas = "^2.0.3"
pyarrow = "^12.0.1"
pytz = "^2023.3.post1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
