[tool.poetry]
name = "meteostat"
version = "2.0.0"
description = "Access and analyze historical weather and climate data with Python."
authors = ["Meteostat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.3.3"
pytz = "^2023.3.post1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.11.0"
pytest = "^8.2.1"
types-requests = "^2.31.0.20240106"
types-pytz = "^2023.3.1.1"
pytest-mock = "^3.14.0"

[tool.poetry.group.extras.dependencies]
matplotlib = "^3.9.2"
metar = "^1.11.0"
lxml = "^5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
